[package]
name = "ecs-settings-applier"
version = "0.1.0"
authors = ["Samuel Karp <skarp@amazon.com>"]
license = "Apache-2.0 OR MIT"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
models = { path = "../../models" }
schnauzer = { path = "../schnauzer" }
log = "0.4"

